# AESD

./: .gitignore  00-front.md  01-abstract.md  01-overview.md  02-api.md  02-overview.md  03-cases.md  04-api.md  05-implementations.md  06-haskell.md  07-cpp.md  08-javascript.md  09-python.md  10-r.md  11-protobuf.md  12-glossary.md  12-references.md  1lp11dnpdb1.yaml  90-protobuf.md  ChangeLog.md  HLint.hs  Makefile  README.md  ReadMe.md  aesd-manual -qc +bb.docx  aesd-manual -qc.docx  aesd.css  aesd_records_4.proto  bookmarking.mermaid  bundle.js  cabal.config  cesds-bundle.js  cesds-records-haystack.cabal  cesds-records-haystack.config  cesds-records-hdbc.cabal  cesds-records-hdbc.config  cesds-records-postgresql.cabal  cesds-records-postgresql.config  cesds-records.cabal  cesds-records.config  (+17 more)
Records/: __init__.py  bookmarks.py  cli.py  data.py  error.py  models.py  records.py  records_def_4_pb2.py
aesd-records/: records.py
aesd_records/: __init__.py  bookmarks.py  cli.py  data.py  records.py
cesdspy/: __init__.py  bookmarks.py  filters.py  models.py  records.py  server.py  servers.py  work.py
cesdspy.egg-info/: PKG-INFO  requires.txt  top_level.txt
doc-src/: 02-overview.md  04-api.md  06-haskell.md  07-cpp.md  09-python.md  11-protobuf.md  68924-cover.docx  Makefile  ReadMe.md  bookmarking.mermaid  dynamic-data-rpc.mermaid  records.mermaid  simulation-rpc.mermaid
doc-src/docs/: aesd-manual.html
doc-src/slides/: python-example.ipynb
doc-src/templates/: records-api.mustache
docs/: aesd-manual.docx  aesd-manual.html  aesd-records.models.html  aesd-records.records_def_4_pb2.html  index.html
docs/haskell/: doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Y.html  doc-index.html  index-frames.html  index.html
docs/haskell/aesd-records/: AESD-Records-Client.html  AESD-Records-Server-File.html  AESD-Records-Server-Manager.html  AESD-Records-Server.html  AESD-Types-Bookmark.html  AESD-Types-Domain.html  AESD-Types-Filter.html  AESD-Types-Model.html  AESD-Types-Record.html  AESD-Types-Request.html  AESD-Types-Response.html  AESD-Types-Value.html  AESD-Types-Variable.html  AESD-Types.html  Network-WebSockets-STM.html  aesd-records.haddock  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  index.html  (+25 more)
docs/haskell/aesd-records-haystack/: AESD-Haystack-Cache-Memory.html  AESD-Haystack.html  NREL-Meters.html  aesd-records-haystack.haddock  doc-index.html  index-frames.html  index.html  mini_AESD-Haystack-Cache-Memory.html  mini_AESD-Haystack.html  mini_NREL-Meters.html
docs/haskell/aesd-records-hdbc/: AESD-Records-Server-HDBC.html  aesd-records-hdbc.haddock  doc-index.html  index-frames.html  index.html  mini_AESD-Records-Server-HDBC.html
docs/python/: aesd-records.bookmarks.html  aesd-records.cli.html  aesd-records.errors.html  aesd-records.html  aesd-records.records.html  aesdpy.html  genindex.html  logging.html  objects.inv  search.html
docs/source/: cesdspy.rst  conf.py  index.rst  logging.rst
libs/Haskell/: .gitignore  daft.nix  release.nix  shell.nix
libs/Haskell/records/: HLint.hs  ReadMe.md  aesd-records.cabal  aesd-records.config  cesds-records.cabal  cesds-records.config  default.nix  release.nix  shell.nix
libs/Haskell/records-haystack/: ReadMe.md  aesd-records-haystack.cabal  aesd-records-haystack.config  cesds-records-haystack.cabal  cesds-records-haystack.config  default.nix  nrel-stm.yaml  release.nix  shell.nix
libs/Haskell/records-haystack/src/: Main.hs
libs/Haskell/records-haystack/src/AESD/: Haystack.hs
libs/Haskell/records-haystack/src/AESD/Haystack/Cache/: Memory.hs
libs/Haskell/records-haystack/src/CESDS/Haystack/Cache/: Memory.hs
libs/Haskell/records-haystack/src/NREL/: Meters.hs
libs/Haskell/records-hdbc/: .gitignore  ReadMe.md  aesd-records-hdbc.cabal  aesd-records-hdbc.config  default.nix  release.nix  shell.nix
libs/Haskell/records-hdbc/examples/postgresql/: 1lp11dnpdb1.yaml
libs/Haskell/records-hdbc/src/: MainMySQL.hs  MainODBC.hs  MainPostgreSQL.hs  MainSQLite3.hs
libs/Haskell/records-hdbc/src/AESD/Records/Server/: HDBC.hs
libs/Haskell/records/samples/: ENB2012.tsv
libs/Haskell/records/src/: MainClientExample.hs  MainRandomServer.hs  MainServer.hs
libs/Haskell/records/src/AESD/: Types.hs
libs/Haskell/records/src/AESD/Records/: Client.hs  Server.hs
libs/Haskell/records/src/AESD/Records/Server/: File.hs  Manager.hs
libs/Haskell/records/src/AESD/Types/: Bookmark.hs  Domain.hs  Filter.hs  Internal.hs  Model.hs  Record.hs  Request.hs  Response.hs  Value.hs  Variable.hs
libs/Haskell/records/src/CESDS/: Types.hs
libs/Haskell/records/src/CESDS/Records/: Server.hs
libs/Haskell/records/src/CESDS/Records/Server/: File.hs  Manager.hs
libs/Haskell/records/src/CESDS/Types/: Filter.hs  Internal.hs  Record.hs  Request.hs  Response.hs  Variable.hs
libs/Haskell/records/src/Network/WebSockets/: STM.hs
libs/JavaScript/: Makefile  ReadMe.md  aesd-bundle.js  model.html  node_modules.tar.bz2  view.css
libs/Python/: .gitignore  ReadMe.md  docs  records_test.sh  setup.py
samples/: reals.tsv  test.tsv
samples/sqlite3/: data.sqlite3  local.yaml
slides/: 20170810a-analysis-coffee-break.docx  20170810a-analysis-coffee-break.pptx  python-example.ipynb
src/: Main.hs  MainClientExample.hs  MainMySQL.hs  MainODBC.hs  MainPostgreSQL.hs  MainRandomServer.hs  MainSQLite3.hs  MainServer.hs  TestJSON.hs  cesds-records.js  controller.js  standalone.js
src/CESDS/: Haystack.hs  PostgreSQL.hs  Records.hs  Server.hs  Types.hs
src/NREL/: Meters.hs
templates/: records-api.mustache
tests/: test-01.out  test-02.out  test-03.out  test.sh
(+94 files in other folders)
