name:                cesds-records-haystack
version:             0.2.12.1
synopsis:            Haystack support for CESDS records API.
description:         Haystack support for CESDS records API.
license:             AllRightsReserved
license-file:        LICENSE
author:              Brian W Bush <brian.bush@nrel.gov>
maintainer:          Brian W Bush <brian.bush@nrel.gov>
copyright:           (c) 2016 National Renewable Energy Laboratory
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

stability:           Stable
homepage:            https://github.nrel.gov/haskell/cesds-records-haystack
bug-reports:         https://github.nrel.gov/haskell/cesds-records/-haystackissues/

extra-source-files:  ReadMe.md
                     ChangeLog.md

source-repository head
  type: git
  location: https://github.nrel.gov/haskell/cesds-records.-haystackgit
 
library
  hs-source-dirs  : src
  exposed-modules : CESDS.Haystack
                    CESDS.Haystack.Cache
                    Data.Aeson.Util
                    Data.Time.Util
                    NREL.Meters
  build-depends   : base >=4.8 && <4.9
                  , aeson
                  , aeson-pretty
                  , bytestring
                  , cesds-records
                  , containers
                  , daft
                  , http-conduit
                  , mtl
                  , scientific
                  , text
                  , time
                  , unordered-containers
                  , vinyl
                  , yaml
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable cesds-haystack-server
  hs-source-dirs  : src
  main-is         : Main.hs
  other-modules   : CESDS.Haystack
  build-depends   : base
                  , aeson
                  , aeson-pretty
                  , bytestring
                  , cesds-records
                  , containers
                  , daft
                  , http-conduit
                  , mtl
                  , scientific
                  , text
                  , time
                  , unordered-containers
                  , vinyl
                  , yaml
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2          
