name         : cesds-records-hdbc
version      : 0.4.1.0
synopsis     : Database support for CESDS records API.
description  :
  The package provides HDBC support for PostgreSQL, SQLite3, MySQL, and ODBC support for the CESDS records API.
  .
  The executable program /cesds-postgresql-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for PostgreSQL.  See <https://www.postgresql.org/docs/8.1/static/libpq.html#LIBPQ-CONNECT> for documentation of the connection string.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  database    : \<\<PostgreSQL connection information\>\>
  @
  .
  The executable program /cesds-mysql-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for MySQL.  See <https://hackage.haskell.org/package/HDBC-mysql-0.7.1.0/docs/Database-HDBC-MySQL.html> for documentation of the connection string.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  database    : \<\<MySQL connection information\>\>
  @
  .
  The executable program /cesds-sqlite3-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for SQLite3.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  database    : \<\<Path to database file\>\>
  @
  .
  The executable program /cesds-odbc-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for ODBC.  See <http://msdn2.microsoft.com/en-us/library/ms715433(VS.85).aspx> for documentation of the connection string.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  database    : \<\<ODBC connection information\>\>
  @
license      : AllRightsReserved
license-file : LICENSE
author       : Brian W Bush <brian.bush@nrel.gov>
maintainer   : Brian W Bush <brian.bush@nrel.gov>
copyright    : (c) 2017 National Renewable Energy Laboratory
category     : Network
build-type   : Simple
cabal-version: >= 1.10

stability    : Stable
homepage     : https://github.nrel.gov/haskell/cesds-records-hdbc
bug-reports  : https://github.nrel.gov/haskell/cesds-records-hdbc/issues/

extra-source-files:  ReadMe.md

source-repository head
  type: git
  location: https://github.nrel.gov/haskell/cesds-records-hdbc.git

flag PostgreSQL
  description     : Compile records server for PostgreSQL.
  default         : True

flag SQLite3
  description     : Compile records server for SQLite 3.
  default         : False

flag MySQL
  description     : Compile records server for MySQL.
  default         : False

flag ODBC
  description     : Compile records server for ODBC.
  default         : False
 
library
  hs-source-dirs  : src
  exposed-modules : CESDS.Records.Server.HDBC
  build-depends   : base >=4.8 && <4.9
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC == 2.4.0.1
                  , uuid
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable cesds-postgresql-server
  hs-source-dirs  : src
  main-is         : MainPostgreSQL.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-postgresql == 2.3.2.4
                  , uuid
                  , yaml
  if flag(PostgreSQL)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable cesds-sqlite3-server
  hs-source-dirs  : src
  main-is         : MainSQLite3.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-sqlite3 == 2.3.3.1
                  , uuid
                  , yaml
  if flag(SQLite3)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable cesds-mysql-server
  hs-source-dirs  : src
  main-is         : MainMySQL.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-mysql == 0.7.1.0
                  , uuid
                  , yaml
  if flag(MySQL)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable cesds-odbc-server
  hs-source-dirs  : src
  main-is         : MainODBC.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-odbc == 2.5.0.1
                  , uuid
                  , yaml
  if flag(ODBC)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts
