name:                cesds-records-hdbc
version:             0.3.4.2
synopsis:            PostgreSQL support for CESDS records API.
description:         PostgreSQL support for CESDS records API.
license:             AllRightsReserved
license-file:        LICENSE
author:              Brian W Bush <brian.bush@nrel.gov>
maintainer:          Brian W Bush <brian.bush@nrel.gov>
copyright:           (c) 2017 National Renewable Energy Laboratory
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

stability:           Stable
homepage:            https://github.nrel.gov/haskell/cesds-records-hdbc
bug-reports:         https://github.nrel.gov/haskell/cesds-records-hdbc/issues/

extra-source-files:  ReadMe.md
                     ChangeLog.md

source-repository head
  type: git
  location: https://github.nrel.gov/haskell/cesds-records-hdbc.git
 
library
  hs-source-dirs  : src
  exposed-modules : CESDS.Records.Server.HDBC
  build-depends   : base >=4.8 && <4.9
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , lens
                  , uuid
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable cesds-postgresql-server
  hs-source-dirs  : src
  main-is         : MainPostgreSQL.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-postgresql
                  , lens
                  , uuid
                  , yaml
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable cesds-sqlite3-server
  hs-source-dirs  : src
  main-is         : MainSQLite3.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-sqlite3
                  , lens
                  , uuid
                  , yaml
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable cesds-odbc-server
  hs-source-dirs  : src
  main-is         : MainODBC.hs
  build-depends   : base
                  , aeson
                  , cesds-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-odbc
                  , lens
                  , uuid
                  , yaml
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts
