name:                cesds-records
version:             0.2.7.0
synopsis:            Implementation of CESDS record API
description:         Implementation of CESDS record API.
license:             AllRightsReserved
license-file:        LICENSE
author:              Brian W Bush <brian.bush@nrel.gov>
maintainer:          Brian W Bush <brian.bush@nrel.gov>
copyright:           (c) 2016 National Renewable Energy Laboratory
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

stability:           Stable
homepage:            https://github.nrel.gov/haskell/cesds-records
bug-reports:         https://github.nrel.gov/haskell/cesds-records/issues/

extra-source-files:  ReadMe.md
                     ChangeLog.md

source-repository head
  type: git
  location: https://github.nrel.gov/haskell/cesds-records.git
 
library
  hs-source-dirs  : src
  exposed-modules : CESDS.Server
                    CESDS.Types
                    CESDS.Types.Bookmark
                    CESDS.Types.Command
                    CESDS.Types.Filter
                    CESDS.Types.Model
                    CESDS.Types.Record
                    CESDS.Types.Server
                    CESDS.Types.Work
                    CESDS.Types.Variable
                    Control.Monad.Except.Util
                    Data.List.Util
                    Data.String.Util
  build-depends   : base >=4.8 && <4.9
                  , aeson
                  , bytestring
                  , colour
                  , data-default
                  , http-types
                  , mtl
                  , network-uri
                  , scientific
                  , scotty
                  , stm
                  , text
                  , transformers
                  , unordered-containers
                  , wai
                  , wai-util
                  , warp
  default-language: Haskell2010
  ghc-options     : -Wall -O2

test-suite cesds-json-parsing
  main-is         : TestJSON.hs
  hs-source-dirs  : src
  other-modules   : CESDS.Types.Test
                    CESDS.Types.Bookmark.Test
                    CESDS.Types.Command.Test
                    CESDS.Types.Filter.Test
                    CESDS.Types.Model.Test
                    CESDS.Types.Record.Test
                    CESDS.Types.Server.Test
                    CESDS.Types.Work.Test
                    CESDS.Types.Variable.Test
  build-depends   : base               
                  , aeson
                  , bytestring
                  , colour
                  , data-default
                  , http-types
                  , mtl
                  , network-uri
                  , QuickCheck
                  , scientific
                  , scotty
                  , stm
                  , text
                  , unordered-containers
                  , vector
                  , wai
                  , wai-util
                  , warp
  buildable       : True               
  type            : exitcode-stdio-1.0 
  default-language: Haskell2010        
  ghc-options     : -Wall -O2          

executable cesds-server
  main-is         : Main.hs
  hs-source-dirs  : src
  other-modules   : CESDS.Server
                    CESDS.Types.Test
                    CESDS.Types.Bookmark.Test
                    CESDS.Types.Command.Test
                    CESDS.Types.Filter.Test
                    CESDS.Types.Model.Test
                    CESDS.Types.Record.Test
                    CESDS.Types.Server.Test
                    CESDS.Types.Work.Test
                    CESDS.Types.Variable.Test
  build-depends   : base               
                  , aeson
                  , bytestring
                  , colour
                  , data-default
                  , http-types
                  , mtl
                  , network-uri
                  , QuickCheck
                  , scientific
                  , scotty
                  , stm
                  , text
                  , transformers
                  , unordered-containers
                  , vector
                  , wai
                  , wai-util
                  , warp
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2          
