name:                cesds-records
version:             0.3.1.2
synopsis:            Implementation of CESDS record API
description:         Implementation of CESDS record API.
license:             AllRightsReserved
license-file:        LICENSE
author:              Brian W Bush <brian.bush@nrel.gov>
maintainer:          Brian W Bush <brian.bush@nrel.gov>
copyright:           (c) 2016 National Renewable Energy Laboratory
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

stability:           Stable
homepage:            https://github.nrel.gov/haskell/cesds-records
bug-reports:         https://github.nrel.gov/haskell/cesds-records/issues/

extra-source-files:  ReadMe.md
                     ChangeLog.md

source-repository head
  type: git
  location: https://github.nrel.gov/haskell/cesds-records.git
 
library
  hs-source-dirs  : src
  exposed-modules : CESDS.Types
                    CESDS.Types.Bookmark
                    CESDS.Types.Model
                    CESDS.Types.Record
                    CESDS.Types.Request
                    CESDS.Types.Response
                    CESDS.Types.Variable
  other-modules   : CESDS.Types.Internal
  build-depends   : base >=4.8 && <4.9
                  , bytestring
                  , cereal
                  , data-default
                  , lens
                  , protobuf
                  , split
                  , websockets
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable cesds-server
  main-is         : Main.hs
  hs-source-dirs  : src
  build-depends   : base               
                  , bytestring
                  , cereal
                  , data-default
                  , lens
                  , protobuf
                  , split
                  , websockets
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2          
