name:                cesds-records
version:             0.4.0.1
synopsis:            Implementation of CESDS record API
description:         Implementation of CESDS record API.
license:             AllRightsReserved
license-file:        LICENSE
author:              Brian W Bush <brian.bush@nrel.gov>
maintainer:          Brian W Bush <brian.bush@nrel.gov>
copyright:           (c) 2016 National Renewable Energy Laboratory
category:            Network
build-type:          Simple
cabal-version:       >= 1.10

stability:           Stable
homepage:            https://github.nrel.gov/haskell/cesds-records
bug-reports:         https://github.nrel.gov/haskell/cesds-records/issues/

extra-source-files:  ReadMe.md
                     ChangeLog.md

source-repository head
  type: git
  location: https://github.nrel.gov/haskell/cesds-records.git
 
library
  hs-source-dirs  : src
  exposed-modules : CESDS.Records.Client
                    CESDS.Records.Server
                    CESDS.Records.Server.File
                    CESDS.Records.Server.Manager
                    CESDS.Types
                    CESDS.Types.Bookmark
                    CESDS.Types.Domain
                    CESDS.Types.Filter
                    CESDS.Types.Model
                    CESDS.Types.Record
                    CESDS.Types.Request
                    CESDS.Types.Response
                    CESDS.Types.Value
                    CESDS.Types.Variable
  other-modules   : CESDS.Types.Internal
  build-depends   : base >= 4.8 && < 4.9
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , lens
                  , mtl
                  , protobuf
                  , regex-posix
                  , raft
                  , split
                  , stm
                  , uuid
                  , websockets
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable cesds-server
  main-is         : MainServer.hs
  hs-source-dirs  : src
  build-depends   : base               
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , directory
                  , filepath
                  , lens
                  , mtl
                  , protobuf
                  , regex-posix
                  , raft
                  , split
                  , stm
                  , uuid
                  , websockets
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded

executable cesds-client-example
  main-is         : MainClientExample.hs
  hs-source-dirs  : src
  build-depends   : base               
                  , bytestring
                  , cereal
                  , containers
                  , data-default
                  , lens
                  , mtl
                  , protobuf
                  , raft
                  , split
                  , stm
                  , uuid
                  , websockets
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded
