name         : aesd-records-haystack
version      : 0.4.1.3
synopsis     : Haystack support for AESD records API.
description  :
  Haystack support for AESD records API.
license      : MIT
license-file : LICENSE
author       : Brian W Bush <brian.bush@nrel.gov>
maintainer   : Brian W Bush <brian.bush@nrel.gov>
copyright    : (c) 2016-18 Alliance for Sustainable Energy
category     : Network
build-type   : Simple
cabal-version: >= 1.10

stability    : Stable
homepage     : https://github.com/NREL/AESD/libs/Haskell/records-haystack
bug-reports  : https://github.com/NREL/AESD/issues/

extra-source-files:  ReadMe.md

source-repository head
  type    : git
  location: https://github.com/NREL/AESD.git
  subdir  : libs/Haskell/records-haystack
 
library
  hs-source-dirs  : src
  exposed-modules : AESD.Haystack
                    AESD.Haystack.Cache.Memory
                    NREL.Meters
  build-depends   : base >=4.8 && <4.9
                  , aeson
                  , bytestring
                  , aesd-records
                  , daft
                  , data-default
                  , http-conduit
                  , lens
                  , mtl
                  , network-uri
                  , raft
                  , resourcet
                  , text
                  , time
                  , unordered-containers
                  , vinyl
                  , yaml
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable aesd-haystack-server
  hs-source-dirs  : src
  main-is         : Main.hs
  build-depends   : base
                  , aeson
                  , bytestring
                  , aesd-records
                  , daft
                  , data-default
                  , http-conduit
                  , lens
                  , mtl
                  , network-uri
                  , raft
                  , resourcet
                  , text
                  , time
                  , unordered-containers
                  , vinyl
                  , yaml
  buildable       : True               
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts
