name         : aesd-records-hdbc
version      : 0.4.1.3
synopsis     : Database support for AESD records API.
description  :
  The package provides HDBC support for PostgreSQL, SQLite3, MySQL, and ODBC support for the AESD records API.
  .
  The executable program /aesd-postgresql-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for PostgreSQL.  See <https://www.postgresql.org/docs/8.1/static/libpq.html#LIBPQ-CONNECT> for documentation of the connection string.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  chunkSize   : \<\<optional number of records per chunk\>\>
  database    : \<\<PostgreSQL connection information\>\>
  @
  .
  The executable program /aesd-mysql-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for MySQL.  See <https://hackage.haskell.org/package/HDBC-mysql-0.7.1.0/docs/Database-HDBC-MySQL.html> for documentation of the connection string.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  chunkSize   : \<\<optional number of records per chunk\>\>
  database    : \<\<MySQL connection information\>\>
  @
  .
  The executable program /aesd-sqlite3-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for SQLite3.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  chunkSize   : \<\<optional number of records per chunk\>\>
  database    : \<\<Path to database file\>\>
  @
  .
  The executable program /aesd-odbc-server/ takes a single argument, which is a configuration file in YAML or JSON format, is a server for ODBC.  See <http://msdn2.microsoft.com/en-us/library/ms715433(VS.85).aspx> for documentation of the connection string.
  .
  @
  host        : \<\<WebSocket host address\>\>
  port        : \<\<WebSocket port number\>\>
  directory   : \<\<path to directory containing SQL SELECT queries\>\>
  persistence : \<\<optional path to journal file for persisting bookmarks\>\>
  chunkSize   : \<\<optional number of records per chunk\>\>
  database    : \<\<ODBC connection information\>\>
  @
license      : MIT
license-file : LICENSE
author       : Brian W Bush <brian.bush@nrel.gov>
maintainer   : Brian W Bush <brian.bush@nrel.gov>
copyright    : (c) 2017 Alliance for Sustainable Energy LLC
category     : Network
build-type   : Simple
cabal-version: >= 1.10

stability    : Stable
homepage     : https://github.com/NREL/AESD/libs/Haskell/records-hdbc
bug-reports  : https://github.com/NREL/AESD/issues/

extra-source-files:  ReadMe.md

source-repository head
  type    : git
  location: https://github.com/NREL/AESD.git
  subdir  : libs/Haskell/records-hdbc

flag PostgreSQL
  description     : Compile records server for PostgreSQL.
  default         : True

flag SQLite3
  description     : Compile records server for SQLite 3.
  default         : True

flag MySQL
  description     : Compile records server for MySQL.
  default         : False

flag ODBC
  description     : Compile records server for ODBC.
  default         : False
 
library
  hs-source-dirs  : src
  exposed-modules : AESD.Records.Server.HDBC
  build-depends   : base >=4.8 && <4.9
                  , aesd-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , uuid
  default-language: Haskell2010
  ghc-options     : -Wall -O2

executable aesd-postgresql-server
  hs-source-dirs  : src
  main-is         : MainPostgreSQL.hs
  build-depends   : base
                  , aeson
                  , aesd-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-postgresql
                  , uuid
                  , yaml
  if flag(PostgreSQL)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable aesd-sqlite3-server
  hs-source-dirs  : src
  main-is         : MainSQLite3.hs
  build-depends   : base
                  , aeson
                  , aesd-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-sqlite3
                  , uuid
                  , yaml
  if flag(SQLite3)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable aesd-mysql-server
  hs-source-dirs  : src
  main-is         : MainMySQL.hs
  build-depends   : base
                  , aeson
                  , aesd-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-mysql
                  , uuid
                  , yaml
  if flag(MySQL)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts

executable aesd-odbc-server
  hs-source-dirs  : src
  main-is         : MainODBC.hs
  build-depends   : base
                  , aeson
                  , aesd-records
                  , data-default
                  , directory
                  , filepath
                  , HDBC
                  , HDBC-odbc
                  , uuid
                  , yaml
  if flag(ODBC)
    buildable     : True
  else
    buildable     : False
  default-language: Haskell2010        
  ghc-options     : -Wall -O2 -threaded -rtsopts
